@@ -83,6 +83,8 @@ typedef struct
 	int  shift_0 ;
 	int  mask ;
 
+	size_t  plane_len ;
+
 } Display ;
 
 #define  PIXEL_RED(pixel,rgbinfo) \
